{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 26,
  "lineage": "37c85dfd-fa49-ab8d-75fb-df7abe4b05ca",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540921709111:vpc/vpc-0a341e41d587af5b5",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-080486ddc0dfe0fe9",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0f9f9b007928e800f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a341e41d587af5b5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d91d5ccf3ddff04f",
            "owner_id": "540921709111"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "linux_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-038b3df3312ddf25d",
            "arn": "arn:aws:ec2:us-east-1:540921709111:instance/i-091a8d168369a1267",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-091a8d168369a1267",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "linux_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d9c0433459433688",
            "private_dns": "ip-172-31-84-129.ec2.internal",
            "private_ip": "172.31.84.129",
            "public_dns": "ec2-18-234-125-119.compute-1.amazonaws.com",
            "public_ip": "18.234.125.119",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06027711913ee982e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "primary"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-034284ae2b9ee617d",
            "tags": {
              "Environment": "Test",
              "Name": "week7-dev-LinuxServer-0",
              "Owner": "Irina",
              "Project": "Ansible"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "week7-dev-LinuxServer-0",
              "Owner": "Irina",
              "Project": "Ansible"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02c2db82ecbcd1a84"
            ]
          },
          "dependencies": [
            "aws_key_pair.linux_key",
            "data.aws_ami.ami-amzn2",
            "data.aws_vpc.default",
            "module.linux_sg.aws_security_group.cbd",
            "module.linux_sg.aws_security_group.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-038b3df3312ddf25d",
            "arn": "arn:aws:ec2:us-east-1:540921709111:instance/i-0b67a616040afcf91",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b67a616040afcf91",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "linux_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0451f288a04cc6062",
            "private_dns": "ip-172-31-82-190.ec2.internal",
            "private_ip": "172.31.82.190",
            "public_dns": "ec2-18-212-56-38.compute-1.amazonaws.com",
            "public_ip": "18.212.56.38",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fcaf2a8f84ebfa47",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "primary"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-034284ae2b9ee617d",
            "tags": {
              "Environment": "Test",
              "Name": "week7-dev-LinuxServer-1",
              "Owner": "Irina",
              "Project": "Ansible"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "week7-dev-LinuxServer-1",
              "Owner": "Irina",
              "Project": "Ansible"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02c2db82ecbcd1a84"
            ]
          },
          "dependencies": [
            "aws_key_pair.linux_key",
            "data.aws_ami.ami-amzn2",
            "data.aws_vpc.default",
            "module.linux_sg.aws_security_group.cbd",
            "module.linux_sg.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.linux_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540921709111:security-group/sg-02c2db82ecbcd1a84",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-02c2db82ecbcd1a84",
            "ingress": [],
            "name": "primary",
            "name_prefix": "",
            "owner_id": "540921709111",
            "revoke_rules_on_delete": false,
            "tags": {
              "Attributes": "primary",
              "Environment": "Test",
              "Name": "week7-dev-LinuxServer-sg",
              "Owner": "Irina",
              "Project": "Ansible"
            },
            "tags_all": {
              "Attributes": "primary",
              "Environment": "Test",
              "Name": "week7-dev-LinuxServer-sg",
              "Owner": "Irina",
              "Project": "Ansible"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0a341e41d587af5b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.linux_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "keyed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "HTTP",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTP from anywhere",
            "from_port": 80,
            "id": "sgrule-1546840870",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02c2db82ecbcd1a84",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.linux_sg.aws_security_group.cbd",
            "module.linux_sg.aws_security_group.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "_allow_all_egress_",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-2862654769",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-02c2db82ecbcd1a84",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.linux_sg.aws_security_group.cbd",
            "module.linux_sg.aws_security_group.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ssh",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow SSH from anywhere",
            "from_port": 22,
            "id": "sgrule-3937973907",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02c2db82ecbcd1a84",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.linux_sg.aws_security_group.cbd",
            "module.linux_sg.aws_security_group.default"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}